--- a/index.html
+++ b/index.html
@@ -8,6 +8,75 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="left-header">
+            <h5 class="header-logo">Header Logo</h5>
+        </div>
+        <div class="right-header">
+            <ul>
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
+            </ul>
+        </div>
+    </div>
+
+    <div class="section1">
+        <div class="left-section1">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="right-section1">
+            <div class="placeholder-img">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section2">
+        <h2>Some random information.</h2>
+        <div class="row">
+            <div class="info">
+                <div class="pic-box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="pic-box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="pic-box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="info">
+                <div class="pic-box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="section3">
+        <blockquote>
+            <p class="quote">This is an  inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who Knows? All I know is that it looks nice</p>
+            <p class="quote-author">- Someone famous</p>
+        </blockquote>
+    </div>
+
+    <div class="section4">
+        <div class="bluebox">
+            <div class="left-bluebox">
+                <h4>Call to action! It's time!</h4>
+                <p>sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="right-bluebox">
+                <button>Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Copyright <span>&copy;</span> Caleb Hagood 2023</p>
+    </div>
 </body>
 </html>
