--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="header">
-        <div class="left-header">
-            <h5 class="header-logo">Header Logo</h5>
-        </div>
-        <div class="right-header">
-            <ul>
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
-            </ul>
-        </div>
-    </div>
-
     <div class="section1">
-        <div class="left-section1">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+        <div class="header">
+            <div class="left-header">
+                <h5 class="header-logo">Header Logo</h5>
+            </div>
+            <div class="right-header">
+                <ul>
+                    <li><a href="#" class = "secondary-text">header link one</a></li>
+                    <li><a href="#" class = "secondary-text">header link two</a></li>
+                    <li><a href="#" class = "secondary-text">header link three</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="right-section1">
-            <div class="placeholder-img">
-                <p>this is a placeholder for an image</p>
+    
+        <div class="content">
+            <div class="left-section1">
+                <h1>This website is awesome</h1>
+                <p class = "secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="right-section1">
+                <div class="placeholder-img">
+                    <p>this is a placeholder for an image</p>
+                </div>
             </div>
         </div>
     </div>
