--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="section3">
         <blockquote>
             <p class="quote">This is an  inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who Knows? All I know is that it looks nice</p>
-            <p class="quote-author">- Someone famous</p>
+            <h4 class="quote-author">- Someone famous</h4>
         </blockquote>
     </div>
 
